--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <div class="outer" id="header_wrap">
       <header class="inner">
         <h1 id="project_title">madye</h1>
-        <h2 id="project_tagline">madye 다운로드 페이지</h2>
-        <section id="downloads"><a class="zip_download_link" href="{{ site.github.zip_url }}">다운로드</a></section>
+        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.1/madye.zip">다운로드</a></section>
       </header>
     </div>
     <!-- MAIN CONTENT-->
     <div class="outer" id="main_content_wrap">
       <section class="inner" id="main_content">
         <p><strong>본 페이지의 정보와 프로그램을 사용함으로 인한 모든 책임은 사용자에게 있습니다.</strong></p>
+        <h2>다운로드</h2>
+        <ul>
+          <li>최신 버전(2018/09/16): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.1/madye.zip"> madye 0.0.1</a></li>
+          <li>기존 유저는 personal 폴더만 옮겨주면 기존의 기록과 설정이 유지됩니다.</li>
+        </ul>
         <h2>프로그램 정보</h2>
-        <dl>
+        <ul>
           <li>동작환경: Windows 7 이상 64bit</li>
           <li>문의: <a href="mailto:madyedev@gmail.com">madyedev@gmail.com</a></li>
-        </dl>
+        </ul>
         <h2>기본 사용 방법</h2>
         <ol>
           <li>프로그램 압축파일을 다운로드 받습니다.</li>
@@ -59,7 +63,7 @@
         </ul>
         <h2>FAQ</h2>
         <dl>
-          <dt>스포이드/팔레트 검색/오차 추정 버튼이 안눌러져요.</dt>
+          <dt>스포이드 버튼이 안눌러져요.</dt>
           <dd>미구현 상태입니다.</dd>
         </dl>
       </section>
