--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125827389-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-125827389-1');
+    </script>
+    <title>Madye</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
-    <title>Madye</title>
   </head>
   <body>
-    <!-- HEADER-->
     <div class="outer" id="header_wrap">
       <header class="inner">
         <h1 id="project_title">madye</h1>
-        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.1/madye.zip">다운로드</a></section>
+        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.zip">다운로드</a></section>
       </header>
     </div>
-    <!-- MAIN CONTENT-->
     <div class="outer" id="main_content_wrap">
       <section class="inner" id="main_content">
         <p><strong>본 페이지의 정보와 프로그램을 사용함으로 인한 모든 책임은 사용자에게 있습니다.</strong></p>
         <h2>다운로드</h2>
         <ul>
-          <li>최신 버전(2018/09/16): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.1/madye.zip"> madye 0.0.1</a></li>
+          <li>최신 버전(2018/09/16): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.zip"> madye 0.0.2</a></li>
           <li>기존 유저는 personal 폴더만 옮겨주면 기존의 기록과 설정이 유지됩니다.</li>
         </ul>
         <h2>프로그램 정보</h2>
@@ -68,7 +73,6 @@
         </dl>
       </section>
     </div>
-    <!-- FOOTER-->
     <div class="outer" id="footer_wrap">
       <footer class="inner">
         <p class="copyright">madye maintained by <a href="mailto:madyedev@gmail.com">madyedev</a></p>
