--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Madye</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <meta name="app:version" content="0.0.2">
+    <meta name="app:download" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.zip">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
   </head>
   <body>
@@ -66,11 +68,6 @@
           <li>색 목록에서 색 설정과 일치하는 색은 RGB 오차값과 함께 빨간 글씨로 표시됩니다.</li>
           <li>색 목록에서 항목을 더블 클릭하면 바로 즐겨찾기로 추가할 수 있는 창이 표시됩니다.</li>
         </ul>
-        <h2>FAQ</h2>
-        <dl>
-          <dt>스포이드 버튼이 안눌러져요.</dt>
-          <dd>미구현 상태입니다.</dd>
-        </dl>
       </section>
     </div>
     <div class="outer" id="footer_wrap">
