--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-125827389-1');
     </script>
-    <title>Madye</title>
+    <title>madye</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <meta name="app:version" content="0.0.2">
