--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <meta name="app:version" content="0.0.2">
-    <meta name="app:download" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.zip">
+    <meta name="app:zip" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.zip">
+    <meta name="app:exe" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.0.2/madye.exe">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
   </head>
   <body>
