--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <title>madye</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="app:version" content="0.1.0">
-    <meta name="app:zip" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.0/madye-v0.1.0.zip">
-    <meta name="app:exe" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.0/madye-v0.1.0.exe.zip">
-    <meta name="app:md5sums" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.0/madye-v0.1.0-md5sums.txt">
+    <meta name="app:version" content="0.1.1">
+    <meta name="app:zip" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1.zip">
+    <meta name="app:exe" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1.exe.zip">
+    <meta name="app:md5sums" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1-md5sums.txt">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
   </head>
   <body>
     <div class="outer" id="header_wrap">
       <header class="inner">
         <h1 id="project_title">madye</h1>
-        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.0/madye-v0.1.0.zip">다운로드</a></section>
+        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1.zip">다운로드</a></section>
       </header>
     </div>
     <div class="outer" id="main_content_wrap">
@@ -29,12 +29,12 @@
         <p><strong>본 페이지의 정보와 프로그램을 사용함으로 인한 모든 책임은 사용자에게 있습니다.</strong></p>
         <h2>다운로드</h2>
         <ul>
-          <li>최신 버전(2020/07/25): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.0/madye-v0.1.0.zip"> madye 0.1.0</a></li>
+          <li>최신 버전(2020/07/25): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1.zip"> madye 0.1.1</a></li>
           <li>기존 유저는 personal 폴더만 옮겨주면 기존의 기록과 설정이 유지됩니다.</li>
         </ul>
         <h2>프로그램 정보</h2>
         <ul>
-          <li>동작환경: Windows 7 이상 64bit</li>
+          <li>동작환경: Windows 7 이상 32bit/64bit</li>
           <li>문의: <a href="mailto:madyedev@gmail.com">madyedev@gmail.com</a></li>
         </ul>
         <h2>기본 사용 방법</h2>
@@ -49,6 +49,9 @@
             </ul>
           </li>
         </ol>
+
+        https://github.com/madyedev/madyedev.github.io/releases/download/v.0.1.1/madye-v0.1.1.zip
+        https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.1/madye-v0.1.1.zip
         <h2>부가 기능</h2>
         <h3>즐겨찾기</h3>
         <ul>
