--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="outer" id="header_wrap">
       <header class="inner">
-        <h1 id="project_title">madye</h1>
+        <h1 id="project_title">마다이 madye</h1>
         <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.zip">다운로드</a></section>
       </header>
     </div>
@@ -49,9 +49,6 @@
             </ul>
           </li>
         </ol>
-
-        https://github.com/madyedev/madyedev.github.io/releases/download/v.0.1.2/madye-v0.1.2.zip
-        https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.zip
         <h2>부가 기능</h2>
         <h3>즐겨찾기</h3>
         <ul>
@@ -73,8 +70,26 @@
           <li>색 목록에서 색 설정과 일치하는 색은 RGB 오차값과 함께 빨간 글씨로 표시됩니다.</li>
           <li>색 목록에서 항목을 더블 클릭하면 바로 즐겨찾기로 추가할 수 있는 창이 표시됩니다.</li>
         </ul>
+        <hr />
+        <div id="disqus_thread"></div>
+          <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+            var disqus_config = function () {
+              this.page.url = "https://madyedev.github.io";  // Replace PAGE_URL with your page's canonical URL variable
+              this.page.identifier = "madye-main"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            (function() { // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              s.src = 'https://madye.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </div>
       </section>
-    </div>
     <div class="outer" id="footer_wrap">
       <footer class="inner">
         <p class="copyright">madye maintained by <a href="mailto:madyedev@gmail.com">madyedev</a></p>
