--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <title>madye</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="app:version" content="0.1.2">
-    <meta name="app:zip" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.zip">
-    <meta name="app:exe" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.exe.zip">
-    <meta name="app:md5sums" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2-md5sums.txt">
+    <meta name="app:version" content="0.2.0">
+    <meta name="app:zip" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.2.0/madye-v0.2.0.zip">
+    <meta name="app:exe" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.2.0/madye-v0.2.0.exe.zip">
+    <meta name="app:md5sums" content="https://github.com/madyedev/madyedev.github.io/releases/download/v0.2.0/madye-v0.2.0-md5sums.txt">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
   </head>
   <body>
     <div class="outer" id="header_wrap">
       <header class="inner">
         <h1 id="project_title">마다이 madye</h1>
-        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.zip">다운로드</a></section>
+        <section id="downloads"><a class="zip_download_link" href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.2.0/madye-v0.2.0.zip">다운로드</a></section>
       </header>
     </div>
     <div class="outer" id="main_content_wrap">
@@ -29,7 +29,7 @@
         <p><strong>본 페이지의 정보와 프로그램을 사용함으로 인한 모든 책임은 사용자에게 있습니다.</strong></p>
         <h2>다운로드</h2>
         <ul>
-          <li>최신 버전(2020/07/25): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.1.2/madye-v0.1.2.zip"> madye 0.1.2</a></li>
+          <li>최신 버전(2020/07/26): <a href="https://github.com/madyedev/madyedev.github.io/releases/download/v0.2.0/madye-v0.2.0.zip"> madye 0.2.0</a></li>
           <li>기존 유저는 personal 폴더만 옮겨주면 기존의 기록과 설정이 유지됩니다.</li>
         </ul>
         <h2>프로그램 정보</h2>
@@ -43,6 +43,7 @@
           <li>압축해제후 madye 실행 파일(madye.exe) 실행합니다.</li>
           <li>색 설정 창에서 찾고자 하는 색의 RGB 또는 HEX 값을 입력합니다.</li>
           <li>일치수와 오차값을 설정합니다.</li>
+          <li>반드시 일치해야하는 번호가 있을 경우 해당 일치 번호를 선택합니다.</li>
           <li>시작 버튼을 누르거나 시작 단축키(Ctrl+Shift+S)를 입력합니다.
             <ul>
               <li>색을 찾는 도중에 중단하고 싶을 때는 같은 단축키를 입력합니다.</li>
