* add FAQ anchor id

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>색 목록에서 항목을 더블 클릭하면 바로 즐겨찾기로 추가할 수 있는 창이 표시됩니다.</li>
         </ul>
         <h2>FAQ</h2>
-        <h3>"염색창을 탐지하는데 실패하였습니다." 오류가 뜹니다.</h3>
+        <h3 id="faq-failed-to-detect-dye-window">"염색창을 탐지하는데 실패하였습니다." 오류가 뜹니다.</h3>
         <p>
           Windows 10 이상의 운영체제에서 고해상도 모니터 이용시 높은 DPI 설정을 이용하면 프로그램이 정상 작동하지 않습니다.
           아래 두 가지 방법 중 하나를 적용 후, 재실행 후 다시 시도해보세요.
